--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ThirdParty/vcpkg"]
 	path = ThirdParty/vcpkg
 	url = https://github.com/microsoft/vcpkg.git
+[submodule "ThirdParty/RaytracerCore"]
+	path = ThirdParty/RaytracerCore
+	url = https://github.com/darianlime/Raytracer.git
